--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index.js"
   },
   "keywords": [],
+  "engines": {"node": ">=16.20.1"},
   "author": "",
   "license": "ISC",
   "dependencies": {
